Refactor to separate style for .circle-gradient into logical chunks.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="component">
       <div class="left">
         <h3>Your Result</h3>
-        <div class="circle-gradient">
+        <div class="circle-gradient centered-flex-column">
           <h1>76</h1>
           <p><strong>of 100</strong></p>
         </div>
